fix items position on mobile devices(add justify-items property)

--- a/src/pages/GamePage/GamePage.module.scss
+++ b/src/pages/GamePage/GamePage.module.scss
@@ -18,6 +18,7 @@
 
     @media (max-width: 1000px) {
         grid-template-columns: repeat(1,1fr);
+        align-content: center;
         grid-template-areas: 
         "header"
         "slider"
