--- a/src/pages/HomePage/Home.module.scss
+++ b/src/pages/HomePage/Home.module.scss
@@ -60,9 +60,13 @@
     &__itemsWrapper {
         padding-top: 30px;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(350px, 450px));
+        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
         grid-gap: 20px;
         grid-auto-rows: minmax(450px, auto);
+
+        @media (max-width: 1000px) {
+            justify-items: center;
+        }
 
     }
 
